# training-basics-python-packaging

./: 404.html  README.md  index.html  mkdocs.yml  sitemap.xml
docs/: episode-01.md  episode-02.md  episode-03.md  episode-04.md  episode-05.md  episode-05b.md  episode-06-supplement.md  index.md
docs/stylesheets/: extra.css  indexpage_episodes_cards.css
episode-01/: index.html
episode-02/: index.html
episode-03/: index.html
episode-04/: index.html
episode-05/: index.html
episode-05b/: index.html
episode-07-supplement/: index.html
kir-pydemo-training/: README.md  TRAINING_GUIDE.md  mkdocs.yml
kir-pydemo-training/docs/: episode-01.md  episode-02.md  episode-04.md  episode-05.md  index.md  quick-reference.md
kir-pydemo-training/episodes/episode01/: README.md  pyproject.toml
kir-pydemo-training/episodes/episode01/src/kir_pydemo/: __init__.py  sequence.py
search/: search_index.json
stylesheets/: code_block_colour_dracula.css
